<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp"
  android:background="@android:color/white">

  <!-- Image representing the offre -->
  <ImageView
    android:id="@+id/imageOffre"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="8dp"
    android:scaleType="centerCrop"
    android:contentDescription="@string/image_description"
    android:src="@drawable/img"/>  <!-- Set the placeholder image here -->

  <!-- Displaying the price -->
  <TextView
    android:id="@+id/tvPrice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:text="@string/price"
    android:layout_marginBottom="8dp"/>

  <!-- Displaying the type of the offer -->
  <TextView
    android:id="@+id/tvType"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:text="@string/type"
    android:layout_marginBottom="8dp"/>

  <!-- Displaying the date -->
  <TextView
    android:id="@+id/tvDate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:text="@string/date"
    android:layout_marginBottom="8dp"/>

  <!-- Displaying the description -->
  <TextView
    android:id="@+id/tvDescription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:text="@string/description"
    android:layout_marginBottom="8dp"/>

  <!-- Button for deleting the offer -->
  <Button
    android:id="@+id/btnDeleteOffre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/delete_offre"
    android:layout_marginTop="16dp" />

  <!-- Button for updating the offer -->
  <Button
    android:id="@+id/btnUpdateOffre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/update_offre" />

</LinearLayout>

