<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp"
  android:background="@android:color/white">

  <!-- Affichage de la date de l'actualite -->
  <ImageView
      android:id="@+id/imageActualite"
      android:layout_width="match_parent"
      android:layout_height="200dp"
  android:layout_marginTop="8dp"
  android:scaleType="centerCrop"
  android:contentDescription="@string/image_description"
      android:src="@drawable/img"/>  <!-- Set the placeholder image here -->

  <TextView
    android:id="@+id/tvDateActualite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:text="@string/date_actualite"
  android:layout_marginBottom="8dp"/>

  <!-- Affichage du lieu de l'actualite -->
  <TextView
    android:id="@+id/tvLieuActualite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:text="@string/lieu_actualite"
  android:layout_marginBottom="8dp"/>

  <!-- Affichage du nom du conducteur -->
  <!--<TextView
    android:id="@+id/tvNomConducteur"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:text="@string/nom_conducteur"
  android:layout_marginBottom="8dp"/>-->

  <!-- Affichage du prénom du conducteur -->
 <!-- <TextView
    android:id="@+id/tvPrenomConducteur"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:text="@string/prenom_conducteur"
  android:layout_marginBottom="8dp"/>-->

  <!-- Affichage de la description de l'actualite -->
  <TextView
    android:id="@+id/tvDescriptionActualite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:text="@string/description_actualite"
  android:layout_marginBottom="8dp"/>

  <Button
      android:id="@+id/btnDeleteActualite"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Delete Actualite"
      android:layout_marginTop="16dp" />

  <Button
      android:id="@+id/btnUpdateActualite"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Update Actualite" />

</LinearLayout>
